--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>GitHub</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -227,7 +227,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Postman</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
