--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Swayam Patial</h1>
+        <h1 class="title fade-in">Swayam Patial</h1>
         <p class="section__text__p2">web Developer</p>
         <div class="btn-container">
           <button
