--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Resume.pdf')"
+            onclick="window.open('assets/Real Resume.pdf')"
           >
             Download CV
           </button>
@@ -238,7 +238,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="assets/Screenshot 2025-04-10 020746.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -247,15 +247,15 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/swayampatial/bytecraft'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='/'"
               >
-                Live Demo
+                current working...
               </button>
             </div>
           </div>
