--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="assets/Screenshot 2025-04-09 230120.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -271,13 +271,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/swayampatial/jobify'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://jobify1-ten.vercel.app/add-job'"
               >
                 Live Demo
               </button>
