--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="assets/Screenshot 2025-04-10 024208.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -295,13 +295,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/swayampatial/temp_backroads-app'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://bbroad-trip-app.netlify.app/'"
               >
                 Live Demo
               </button>
